Updated to work with 1.14.4.
This should be mostly working.
The changes I did aren't the best, but they are good enough for me.

--- a/WelcomeWarps/plugin.yml
+++ b/WelcomeWarps/plugin.yml
@@ -3,6 +3,7 @@ main: com.wasteofplastic.wwarps.WWarps
 version: ${version}
 description: Easy to use warp signs for players
 author: tastybento
+api-version: 1.14
 commands:
     wwarp:
        description: Show Welcome Warp Signs
